# tradingview_ws

./: README.md  setup.cfg  setup.py  test-chart.py  test-quote.py  test.py
src/tradingview_ws/: __init__.py  tdws.py
