[metadata]
name = tradingview_ws
version = 0.0.3
author = Donald
author_email = donald.nguyen.it@gmail.com
description = Package get data from cnbc market
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dearvn/tradingview_ws
project_urls =
    Bug Tracker = https://github.com/dearvn/tradingview_ws/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src